# market_data_processor

./: CMakeLists.txt  README.md  main.cpp
include/: DataFeedSimulator.hpp  EventType.hpp  MarketDataProcessor.hpp  MarketEvent.hpp
include/core/: MarketDataProcessor.hpp  MarketEvent.hpp
include/data_sources/: DataFeedSimulator.hpp
src/: DataFeedSimulator.cpp  EventType.cpp  MarketDataProcessor.cpp  MarketEvent.cpp
src/core/: EventType.cpp  MarketDataProcessor.cpp  MarketEvent.cpp
src/data_sources/: DataFeedSimulator.cpp
tests/: test_market_data_processor.cpp
